--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -20,6 +20,14 @@ jobs:
           bundler-cache: true
       - run: bundle exec jekyll build
       - run: ls -lash
+      - run: bundle exec rake test_ci
+      - uses: actions/upload-artifact@v3
+        with:
+          name: _devportal
+          path: |
+            _site/
+            .firebaserc
+            firebase.json
 
   # deploy_production:
   #   if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
