--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -29,6 +29,27 @@ jobs:
             .firebaserc
             firebase.json
 
+  build_test_docs:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          repository: ePages-de/epages-docs
+          ref: master
+      - run: pwd
+      - uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: 2.7.3
+          bundler-cache: true
+      - run: bundle exec jekyll build
+      - run: ls -lash
+      - run: bundle exec rake test_ci
+      - uses: actions/upload-artifact@v3
+        with:
+          name: _docs
+          path: |
+            _site/
+
   # deploy_production:
   #   if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
   #   needs:
