--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -61,10 +61,29 @@ jobs:
         with:
           name: _docs
           path: ./_docs
-      - run: rsync -abviuzP _docs/ _site/
-      - run: ls -lash
+      - uses: actions/upload-artifact@v3
+        with:
+          name: _site
+          retention-days: 7
+          path: |
+            _site/
+            .firebaserc
+            firebase.json
+
+  deploy_staging:
+    runs-on: ubuntu-latest
+    needs:
+      - combine_projets
+    steps:
+      - uses: actions/download-artifact@v3
+        with:
+          name: _site
       - run: ls -lash _site
-      - run: ls -lash _docs
+      - uses: ePages-de/action-node-run@v1
+        with:
+          node_version: 18
+          cache_key: node
+          cmd: npm install --save-dev firebase-tools
 
   # deploy_production:
   #   if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
