--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -61,6 +61,7 @@ jobs:
         with:
           name: _docs
           path: ./_docs
+      - run: rsync -abviuzP _docs/ _site/
       - uses: actions/upload-artifact@v3
         with:
           name: _site
