--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -25,7 +25,6 @@ jobs:
           retention-days: 7
           path: |
             _site/
-            .firebaserc
             firebase.json
 
   build_test_docs:
@@ -68,10 +67,10 @@ jobs:
           retention-days: 7
           path: |
             _site/
-            .firebaserc
             firebase.json
 
   deploy_staging:
+    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/develop' }}
     runs-on: ubuntu-latest
     needs:
       - combine_projets
@@ -85,6 +84,10 @@ jobs:
         with:
           node-version: 18
       - run: npm install --save-dev firebase-tools
+      - run: echo $FIREBASE_PROJECT
+        env:
+          FIREBASE_PROJECT: ${{ secrets.FIREBASE_APP_NAME_STAGING }}
+      # - run: ./node_modules/.bin/firebase deploy --project $ENVIRONMENT --token=$FIREBASE_TOKEN --non-interactive
 
   # deploy_production:
   #   if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
