--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -71,7 +71,7 @@ jobs:
             firebase.json
 
   deploy_staging:
-    if: ${{ github.event_name == 'push' &&  }}
+    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/develop' }}
     runs-on: ubuntu-latest
     needs:
       - combine_projets
