Correct link number

--- a/_data/jobs.yml
+++ b/_data/jobs.yml
@@ -9,7 +9,7 @@
   location: Hamburg/Barcelona
 
 - title: (Senior) Java Developer (all genders)
-  link: https://epages-gmbh.jobs.personio.de/job/202168
+  link: https://epages-gmbh.jobs.personio.de/job/202115
   description: Join one of our cross-functional Scrum teams and work on a microservice-based architecture for our e-commerce platform.
   location: Hamburg/Barcelona
 
@@ -19,7 +19,7 @@
   location: Barcelona
 
 - title: Product Owner (all genders)
-  link: https://epages-gmbh.jobs.personio.de/job/226186
+  link: https://epages-gmbh.jobs.personio.de/job/1075968
   description: Be responsible for the further development of our software and support several Scrum teams with your knowledge.
   location: Jena
 
