--- a/_data/jobs.yml
+++ b/_data/jobs.yml
@@ -11,7 +11,7 @@
 - title: (Senior) Java Developer (all genders)
   link: https://epages-gmbh.jobs.personio.de/job/202115
   description: Join one of our cross-functional Scrum teams and work on a microservice-based architecture for our e-commerce platform.
-  location: Hamburg/Barcelona
+  location: Jena/Hamburg/Barcelona
 
 - title: Product Owner (all genders)
   link: https://epages-gmbh.jobs.personio.de/job/226186
