--- a/_data/jobs.yml
+++ b/_data/jobs.yml
@@ -25,5 +25,5 @@
 
 - title: Senior User Experience Designer (all genders)
   link: https://epages-gmbh.jobs.personio.de/job/1137607
-  description: Work closely with product owners, UI designers, UX writers, and developers to develop user-friendly interaction concepts for our products.
+  description: Work closely with product owners, UI designers, UX writers, and developers to create user-friendly interaction concepts for our products.
   location: Hamburg
