--- a/_data/jobs.yml
+++ b/_data/jobs.yml
@@ -1,29 +1,4 @@
-- title: Software Developer - 3rd Party Integration, REST API (all genders)
-  link: https://epages-gmbh.jobs.personio.de/job/202173
-  description: Be part of a Scrum team and support us in the conception, development and maintenance of our connectors and the extension of our REST API.
-  location: Hamburg/Barcelona
-
-- title: Senior JavaScript Engineer (all genders)
-  link: https://epages-gmbh.jobs.personio.de/job/201909
-  description: Build a responsive, modular, and highly user interactive web application with us that is easy to scale and to extend.
-  location: Hamburg/Barcelona
-
-- title: (Senior) Java Developer (all genders)
-  link: https://epages-gmbh.jobs.personio.de/job/202115
-  description: Join one of our cross-functional Scrum teams and work on a microservice-based architecture for our e-commerce platform.
-  location: Jena/Hamburg/Barcelona
-
-- title: Product Owner (all genders)
-  link: https://epages-gmbh.jobs.personio.de/job/226186
-  description: Be responsible for the further development of our software and support several Scrum teams with your knowledge.
-  location: Barcelona
-
-- title: Product Owner (all genders)
-  link: https://epages-gmbh.jobs.personio.de/job/1075968
-  description: Be responsible for the further development of our software and support several Scrum teams with your knowledge.
-  location: Jena
-
-- title: Senior User Experience Designer (all genders)
-  link: https://epages-gmbh.jobs.personio.de/job/1137607
-  description: Work closely with product owners, UI designers, UX writers, and developers to create user-friendly interaction concepts for our products.
-  location: Hamburg
+- title:
+  link:
+  description:
+  location:
